# Portal-API

./: .env.example  .gitignore  Cargo.toml
database/: Cargo.toml
database/migrations/: 20251225100051_initialization.sql  20251225201750_update_threat_data.sql
database/src/: models.rs  pool.rs
database/src/models/: country.rs  threat.rs  threat_knowledge.rs  threat_source.rs  threat_status.rs  threat_type.rs
infra/: docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker.sh
migrations/: 20251225230357_update_threat_file_url_field.sql  20251226004446_add_threat_id_from_source_field.sql  20251226012541_add_threat_id_from_source_field_update.sql
repos/: Cargo.toml
repos/examples/: download_xlsx.rs  fstec_load_threats.rs
repos/src/: resources.rs  utils.rs
repos/src/utils/: download_xlsx.rs  excel_date_to_utc.rs  naive_date_to_utc.rs  parse_threat_xlsx_to_threat.rs
src/: app.rs  config.rs  doc.rs  logging.rs  main.rs  routes.rs
src/routes/: status.rs  v1.rs  v2.rs
src/routes/v1/: ai.rs  country.rs  threat.rs
src/routes/v1/ai/: query.rs
src/routes/v1/threat/: class.rs  create_threat.rs  get_threats.rs  source.rs
src/routes/v1/threat/source/: create_source.rs
