[package]
name = "repos"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

calamine = "0.32"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
database = { path = "../database" }
